--- a/main.scss
+++ b/main.scss
@@ -744,7 +744,7 @@ textarea {
   border-right: 1px solid white;
   border-radius: 5px;
   background-image: none;
-  background-color: var(--bg-nav);
+  background-color: var(--gray0);
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
