--- a/main.css
+++ b/main.css
@@ -590,7 +590,7 @@ textarea:focus {
   flex: 1 0 auto;
   border-radius: 2px;
   border: 2px solid var(--border);
-  background-color: var(--bg-nav);
+  background-color: var(--gray2);
   justify-content: space-between;
   flex-direction: column;
 }
