--- a/main.scss
+++ b/main.scss
@@ -772,7 +772,7 @@ textarea {
     flex: 1 0 auto;
     border-radius: 2px;
     border: 2px solid var(--border);
-    background-color: var(--bg-nav);
+    background-color: var(--gray2);
     justify-content: space-between;
     flex-direction: column;
 
