--- a/main.css
+++ b/main.css
@@ -11,7 +11,6 @@
 body {
   color: var(--text-primary);
   background: var(--bg);
-  transition: background 500ms ease-in-out, color 1000ms ease-in-out;
   margin: 0;
   padding: 0;
   font-family: "roboto";
@@ -392,20 +391,16 @@ main {
 
 /*------------------------------------------title--------------------------------------*/
 header {
-  padding-top: 2rem;
+  display: block;
+  padding-top: 5rem;
   position: relative;
   z-index: -5;
   border: 1px solid var(--border-color);
   background: var(--bg-nav);
-  height: 22vh;
+  height: 20vh;
   text-align: center;
-  font-size: clamp(1.5rem, 1.5vw, 2rem);
-  margin: 0;
+  font-size: clamp(1rem, 1.5vw, 3rem);
   color: var(--text-secondary);
-}
-
-header h1 h2 {
-  margin-top: 0;
 }
 
 .title {
@@ -414,7 +409,7 @@ header h1 h2 {
 
 @media only screen and (max-width: 600px) {
   .title {
-    margin-top: 5rem;
+    margin-top: 7rem;
   }
 }
 
@@ -422,27 +417,32 @@ header h1 h2 {
   .title {
     margin-top: 5rem;
   }
+  .title h1 h2 {
+    margin-top: 2rem;
+  }
 }
 
 /*-------------------------------------------hero---------------------------------------------*/
 .hero {
   position: relative;
-  top: 20%;
 }
 
 .hero svg {
   scroll-margin-top: 22rem;
 }
 
-@media only screen and (min-width: 1020px) {
-  .hero {
-    top: 0;
-    height: 80%;
-  }
-}
-
 .top-container {
   background: radial-gradient(var(--sky1), var(--sky2));
+}
+
+@media screen and (min-width: 1020px) {
+  .top-container {
+    width: 60%;
+  }
+  .hero {
+    display: grid;
+    place-items: center;
+  }
 }
 
 /*-------------------------------------------main---------------------------------------------*/
@@ -451,7 +451,7 @@ header h1 h2 {
 }
 
 .middle-title {
-  top: 5rem;
+  top: 0;
   min-height: 30vh;
   display: block;
   clip-path: polygon(50% 0%, 100% 0, 100% 65%, 50% 100%, 0 65%, 0 0);
@@ -464,7 +464,7 @@ header h1 h2 {
 }
 
 .middle h2 {
-  font-size: clamp(2.5rem, 5.5vw, 4rem);
+  font-size: clamp(1.5rem, 1.5vw, 3rem);
   margin: 0;
 }
 
@@ -485,19 +485,21 @@ img {
   display: grid;
   text-align: center;
   grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
-  grid-gap: 1ch;
-  padding-bottom: 5rem;
+  grid-gap: 3ch;
+  padding-bottom: 2rem;
 }
 
 .content .snapshots {
   margin: 3rem 0;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 100px 100px;
+  grid-template-rows: 4rem 7rem;
   grid-template-areas: "a a a" "b b c";
 }
 
 .content .snapshots h1, .content .snapshots a {
+  padding: 0;
+  margin: 0;
   text-decoration: none;
   color: var(--text);
   grid-area: a;
@@ -553,7 +555,6 @@ img {
   padding-bottom: 1rem;
   display: flex;
   flex-direction: column;
-  height: 100%;
   width: 94%;
   margin: 0 auto;
 }
@@ -562,12 +563,12 @@ img {
 textarea {
   display: block;
   min-height: 2rem;
-  border: 1px solid black;
-  border-bottom: 1px solid white;
-  border-right: 1px solid white;
-  border-radius: 5px;
+  border: 2px solid black;
+  border-bottom: 2px solid white;
+  border-right: 2px solid white;
+  border-radius: 4px;
   background-image: none;
-  background-color: var(--gray2);
+  background-color: var(--nav);
   box-shadow: none;
   resize: none;
 }
@@ -589,8 +590,8 @@ textarea:focus {
 .feedback-card {
   flex: 1 0 auto;
   border-radius: 2px;
-  border: 2px solid var(--border);
-  background-color: var(--gray2);
+  border: 2px solid white;
+  background-color: var(--blue1);
   justify-content: space-between;
   flex-direction: column;
 }
@@ -614,11 +615,11 @@ textarea:focus {
 }
 
 .feedback-body__email {
-  background-color: var(--bg-nav);
-  border: 1px solid black;
-  border-bottom: 1px solid white;
-  border-right: 1px solid white;
-  border-radius: 4px;
+  background-color: var(--blue1);
+  border: 2px solid black;
+  border-bottom: 2px solid white;
+  border-right: 2px solid white;
+  border-radius: 2px;
   min-height: 2.5rem;
 }
 
@@ -672,6 +673,18 @@ textarea:focus {
   filter: grayscale(90%) opacity(0.7);
 }
 
+@media only screen and (min-width: 1020px) {
+  .text-container {
+    padding-top: 1em;
+    padding-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 74%;
+    margin: 0 auto;
+  }
+}
+
 /*contact large screens --------------------------------------------------* contact large screens*/
 /*---------------------------------------bottom--------------------*/
 .bottom {
@@ -689,8 +702,7 @@ textarea:focus {
 
 .sky-box {
   display: block;
-  background-color: var(--bg);
-  z-index: 3;
+  z-index: 1;
   min-height: 38vh;
 }
 
@@ -709,7 +721,7 @@ textarea:focus {
 
 #celestial-body {
   top: 3rem;
-  left: 38rem;
+  margin-top: 8rem;
   margin-left: 8rem;
   border-radius: 50%;
   border-width: 0px;
@@ -720,6 +732,7 @@ textarea:focus {
 }
 
 #celestial-body svg {
+  z-index: 1;
   position: relative;
   display: block;
 }
@@ -956,20 +969,14 @@ textarea:focus {
   }
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (min-width: 1100px) {
   .ether {
-    height: 15vh;
+    margin-left: 22rem;
+    height: 8vh;
   }
   #celestial-body {
     top: -4rem;
     margin-left: 17rem;
-  }
-}
-
-@media only screen and (min-width: 1100px) {
-  .ether {
-    margin-left: 42rem;
-    height: 15vh;
   }
 }
 
@@ -985,13 +992,14 @@ textarea:focus {
   fill: url(#g1);
 }
 
-.path {
-  height: 230px;
-  bottom: -10px;
-  top: 115px;
-  /*background:linear-gradient(to bottom, transparent, rgba(24, 24, 24, 0.885)),repeat-x;*/
-  position: absolute;
+.path svg {
   z-index: 2;
+  height: 22rem;
+  top: 5rem;
+  position: absolute;
+  bottom: 0px;
+  left: 0;
+  right: 0;
 }
 
 #front {
@@ -1024,13 +1032,13 @@ textarea:focus {
 }
 
 .background svg {
-  height: 240px;
-  top: 200px;
+  height: 25rem;
+  top: 1rem;
+  z-index: 1;
   position: absolute;
   bottom: 0px;
   left: 0;
   right: 0;
-  z-index: 1;
 }
 
 #back {
@@ -1051,13 +1059,32 @@ textarea:focus {
 }
 
 /*---------------------------------car------------------------------*/
-.car svg {
+.car #car {
   position: absolute;
   z-index: 3;
   width: 100px;
-  left: 145px;
+  left: 9.07rem;
   bottom: 30px;
   animation: car 1500ms linear infinite paused;
+}
+
+.car .back-wheel {
+  position: absolute;
+  left: 9.46rem;
+  bottom: -192px;
+}
+
+.car .front-wheel {
+  left: 13.58rem;
+  bottom: -192px;
+}
+
+.car .wheel {
+  position: absolute;
+  z-index: 3;
+  width: 1.6rem;
+  --animn:wheel;
+  --animps:paused;
 }
 
 @keyframes car {
@@ -1070,24 +1097,6 @@ textarea:focus {
   0% {
     transform: translateY(-1px);
   }
-}
-
-.back-wheel {
-  left: 152.4px;
-  bottom: -192px;
-}
-
-.front-wheel {
-  left: 218.4px;
-  bottom: -192px;
-}
-
-.wheel {
-  position: absolute;
-  z-index: 3;
-  width: 24px;
-  --animn:wheel;
-  --animps:paused;
 }
 
 @keyframes wheel {
@@ -1128,7 +1137,7 @@ textarea:focus {
 }
 
 [data-animation] {
-  animation: var(--animn, none) var(--animdur, 1s) var(--animc, infinite) var(--animtf, linear) var(--animps, paused);
+  animation: var(--animn, none) var(--animdur, 1s) var(--animc, infinite) var(--animfm, none) var(--animtf, linear) var(--animps, paused);
 }
 
 /* STATE */
@@ -1137,27 +1146,46 @@ textarea:focus {
 }
 
 .meteo {
-  background-color: var(--bg);
+  --animfm:forwards;
+  --animc:1;
+  --animn:meteo;
+  --animdur:8s;
+  --animtf:ease-in-out;
+  opacity: 0;
   text-align: center;
-  font-size: clamp(1.8rem, 1.8vw, 2.5rem);
+  font-size: clamp(1.4rem, 2.4vw, 3.2rem);
   font-family: "roboto";
   font-weight: 600;
   color: var(--text);
-  z-index: -10;
+  z-index: 1;
   position: relative;
-  left: 5rem;
-  bottom: 5rem;
 }
 
 .meteo span {
   font-family: "Poppins";
   font-weight: 500;
-  text-align: right;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 860px) {
   .meteo {
-    margin-right: 15rem;
+    display: block;
+    position: relative;
+    bottom: -8rem;
+  }
+}
+
+@media only screen and (min-width: 1020px) {
+  .meteo {
+    display: block;
+    position: relative;
+    bottom: -5.2rem;
+  }
+}
+
+@keyframes meteo {
+  to {
+    transform: translateY(-26rem);
+    opacity: 1;
   }
 }
 
@@ -1225,8 +1253,8 @@ textarea:focus {
   --yellow: hsl(56, 100%, 70%);
   --grass:hsl(59, 69%, 25%);
   --tree:hsl(103, 69%, 14%);
-  --sand1:hsl(56, 76%, 90%);
-  --sand2:hsl(56, 76%, 65%);
+  --sand1:hsl(49, 93%, 51%);
+  --sand2:hsl(49, 93%, 91%);
   --river:hsl(180, 100%, 85%);
 }
 
@@ -1235,7 +1263,7 @@ textarea:focus {
 }
 
 .light {
-  --bg: var(--sand1);
+  --bg: var(--sand2);
   --bg-nav: radial-gradient(var(--sky3) , var(--blue1));
   --bg-dropdown: var(--gray0);
   --text: var(--gray6);
@@ -1267,6 +1295,7 @@ textarea:focus {
 }
 
 .solar {
+  --blue1:hsl(24, 90%, 16%);
   --gray0: hsl(56, 100%, 92%);
   --gray1: hsl(61, 74%, 89%);
   --gray2: hsl(49, 56%, 45%);
