--- a/main.scss
+++ b/main.scss
@@ -416,7 +416,7 @@ main {
   text-transform: uppercase;
   margin-bottom: 1rem;
   text-align: center;
-  color: var(--text-secondary);
+  color: var(--text-primary);
   background: var(--bg-secondary);
   font-size: 1.3rem;
   letter-spacing: 0.3ch;
@@ -527,8 +527,7 @@ header{
   height: 20vh;
   text-align: center;
   font-size: clamp(1rem, 1.5vw, 3rem);
-    
-  color: var(--text-secondary); 
+  color: var(--text-primary); 
      
 
 }
