--- a/main.css
+++ b/main.css
@@ -1170,13 +1170,14 @@ textarea:focus {
   .meteo {
     display: block;
     position: relative;
-    bottom: -8rem;
+    bottom: 8rem;
   }
 }
 
 @media only screen and (min-width: 1020px) {
   .meteo {
     display: block;
+    margin-right: 13rem;
     position: relative;
     bottom: -5.2rem;
   }
